--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-dev": "env-cmd -f .env.development npm run-script build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
