--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.0",
     "jquery": "^3.6.1",
     "net": "^1.0.2",
+    "env-cmd": "^10.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
