--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.2.1",
     "env-cmd": "^10.1.0",
     "html2canvas": "^1.4.1",
-    "jquery": "^3.6.1",
+    "jquery": "^3.6.2",
+    "jquery-ui": "^1.13.2",
     "jspdf": "^2.5.1",
     "net": "^1.0.2",
     "qrcode.react": "^3.1.0",
